[description]: 实现长按保存到SD卡功能 相关权限检测 [remarks]: [link]:

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,14 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/u_color_ffffff"
-        app:action_icon="@drawable/u_fii_action"
         app:action_margin_right="@dimen/dd_dimen_40px"
         app:content_type="all_allow"
         app:enable="true"
-        app:gravity="left"
         app:hint="请输入"
         app:label="first_name"
-        app:margin_right="@dimen/dd_dimen_96px"
         app:max_length="20"
         app:type="manual" />
 
@@ -27,14 +24,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/u_color_ffffff"
-        app:action_icon="@drawable/u_fii_action"
         app:action_margin_right="@dimen/dd_dimen_40px"
         app:content_type="all_allow"
         app:enable="true"
-        app:gravity="left"
         app:hint="请输入"
         app:label="last_name"
-        app:margin_right="@dimen/dd_dimen_96px"
         app:max_length="20"
         app:type="manual" />
 
@@ -48,7 +42,7 @@
         android:drawableStart="@drawable/result"
         android:text="扫描结果(自动复制到剪切板)"
         android:textStyle="bold"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_result"
@@ -57,7 +51,7 @@
         android:background="@android:color/white"
         android:padding="10dp"
         android:textIsSelectable="true"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
