[description]: [remarks]: [link]:

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,9 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <include layout="@layout/content_main" />
+        <include layout="@layout/content_parameter" />
+
+        <include layout="@layout/content_string" />
 
     </LinearLayout>
 
